<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.convergesolutions.tag.Hashtag">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="87dp"
        android:layout_height="103dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/applogo"
        app:layout_constraintRight_toLeftOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="18dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginEnd="41dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="72sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="41dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        android:layout_marginBottom="18dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InventoryText"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="81dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:elevation="3dp"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="193dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="LabelFor"
        android:hint="@string/HashEx"
        app:layout_constraintHorizontal_bias="0.32" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DoneButton"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="38dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="UserSummary"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <AdapterViewFlipper
        android:layout_width="0dp"
        android:layout_height="94dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>
